# Global-Corruptor

./: .gitignore  BaseAddressGetter.VC.opendb  BaseAddressGetter.cpp  BaseAddressGetter.sln  CMakeLists.txt  README.md  stdafx.cpp
BaseAddressGetter/: BaseAddressGetter.cpp  BaseAddressGetter.vcxproj  BaseAddressGetter.vcxproj.filters  ReadMe.txt
BaseAddressGetter/Debug/: BaseAddressGetter.pch  baseaddressgetter.obj.enc  vc140.idb
BaseAddressGetter/Debug/BaseAddr.869004F8.tlog/: BaseAddressGetter.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BaseAddressGetter/x64/Debug/: baseaddressgetter.obj.enc  vc140.idb
BaseAddressGetter/x64/Debug/BaseAddr.869004F8.tlog/: BaseAddressGetter.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: BaseAddressGetter.ilk
ipch/BASEADDRESSGETTER-d455effb/: BASEADDRESSGETTER-41c26e78.ipch  BASEADDRESSGETTER-797ec9d6.ipch
x64/Debug/: BaseAddressGetter.ilk
